--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@ code {
 
 }
 
+.center-2 {
+  margin-left: auto;
+  margin-right: auto;
+  width: 6%;
+}
+
 .image {
   display: block;
   margin-left: auto;
